--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: traits
+Package: traitdataform
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1
@@ -6,5 +6,11 @@ Date: 2017-04-06
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
-License: What license is it under?
-LazyData: TRUE
+License: MIT
+LazyData: FALSE
+Imports: 
+    data.table, 
+    reshape, 
+    taxize
+RoxygenNote: 6.0.0
+VignetteBuilder: knitr
