--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: MIT
-LazyData: FALSE
+LazyData: TRUE
 Imports: 
     data.table, 
     reshape, 
