--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,16 @@ export(as.traitdata)
 export(carabids)
 export(fixlogical)
 export(get_gbif_taxonomy)
+export(heteroptera)
 export(heteropteraRaw)
 export(mapping)
+export(mutate.traitdata)
 export(passerines)
 export(standardize)
 export(standardize.taxonomy)
-export(units)
+export(standardize.traits)
 import(data.table)
 import(readxl)
 import(reshape)
 import(taxize)
+import(units)
