try fix #14: add dependency on curl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(passerines)
 export(standardize)
 export(standardize.taxonomy)
 export(standardize.traits)
+import(curl)
 import(data.table)
 import(readxl)
 import(reshape)
