--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: traitdataform
 Type: Package
 Title: Formatting trait data compliant with the Ecological Traitdata Standard
-Version: 0.2.2
+Version: 0.2.3
 Date: 2017-11-24
-Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre", "aut")), 
-    person("Caterina", "Penone", role = c("ctb")))
+Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre", "aut")), person("Caterina", "Penone", role = c("ctb")))
 Description: This package assists in handling functional trait data and transferring them into the trait data standard.
 License: MIT
 LazyData: FALSE
