--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: traitdataform
 Type: Package
 Title: Formatting trait data compliant with the Ecological Traitdata Standard
-Version: 0.2.3
-Date: 2017-11-24
+Version: 0.2.4
+Date: 2018-03-22
 Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre", "aut")), person("Caterina", "Penone", role = c("ctb")))
 Description: This package assists in handling functional trait data and transferring them into the trait data standard.
 License: MIT
-LazyData: FALSE
+LazyData: TRUE
 Imports:
     data.table, 
     reshape, 
