--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,12 @@ Type: Package
 Title: Formatting trait data compliant with the Ecological Traitdata Standard
 Version: 0.3.0
 Date: 2018-11-15
-Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre", "aut")), person("Caterina", "Penone", role = c("ctb")))
-Description: This package assists in handling functional trait data and transferring them into the trait data standard.
+Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre"), 
+  comment = c(ORCID = "0000-0002-1494-5684")), 
+    person("Caterina", "Penone", role = c("ctb"), comment = c(ORCID = "0000-0002-8170-6659")),
+    person("Andreas", "Ostrowski", role = c("ctb"), comment = c(ORCID = "0000-0002-2033-779X")),
+    person("Dennis", "Heimann", role = c("ctb")))
+Description: Assistance for handling functional trait data and applying the Ecological Trait-data Standard terminology.
 License: MIT + file LICENSE
 LazyData: TRUE
 Depends:
@@ -19,8 +23,8 @@ Imports:
     RCurl,
     plyr,
     readxl
-URL: http://fdschneider.github.io/traitdataform, https://github.com/fdschneider/traitdataform
-BugReports: https://github.com/fdschneider/traitdataform/issues 
+URL: https://EcologicalTraitData.github.io/traitdataform, https://github.com/EcologicalTraitData/traitdataform
+BugReports: https://github.com/EcologicalTraitData/traitdataform/issues
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 Encoding: UTF-8
