fix exports, update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,14 @@ export(mutate.traitdata)
 export(pulldata)
 export(read.service)
 export(read.service.blocks)
+export(standardise_taxa)
+export(standardise_traits)
 export(standardize)
 export(standardize.exploratories)
 export(standardize.taxonomy)
 export(standardize.traits)
+export(standardize_taxa)
+export(standardize_traits)
 import(RCurl)
 import(XML)
 import(getPass)
