--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,5 +32,6 @@ import(taxize)
 import(units)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
-importFrom(reshape,melt)
-importFrom(reshape,rename)
+importFrom(plyr,rbind.fill)
+importFrom(reshape2,dcast)
+importFrom(reshape2,melt)
