don't build vignettes from Rmd

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ addons:
   apt:
     packages:
       - libudunits2-dev 
-      - language-pack-de
 os:
+- linux
 - osx
 r:
 - release
 - devel
- 
+
+r_check_args: --no-build-vignettes  
