--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,6 @@ pandoc: 2.1.1
 pkgdown: 1.1.0
 pkgdown_sha: ~
 articles:
+  traitdataform-units: traitdataform-units.html
   traitdataform: traitdataform.html
 
