--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.co
     person("Felix","Neff", role = c("ctb")),
     person("Markus J.", "Ankenbrand", role = c("ctb")))
 Description: Assistance for handling ecological trait data and applying the 
-    Ecological Trait-Data Standard terminology (Schneider et al. 2018
-    <doi:10.1101/328302>). There are two major use cases: (1) preparation of
+    Ecological Trait-Data Standard terminology (Schneider et al. 2019
+    <doi:10.1111/2041-210X.13288>). There are two major use cases: (1) preparation of
     own trait datasets for upload into public data bases, and (2) harmonizing
     trait datasets from different sources by re-formatting them into a unified
     format. See 'traitdataform' website for full documentation. 
