--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,27 @@ addons:
     packages:
       - libudunits2-dev 
       
-os:
-- linux
-- osx
-
-r:
-- release
-- devel
-
-r_check_args: --no-build-vignettes  
-
+matrix:
+  include:
+  - r: release
+    os: linux
+    script:
+      - R CMD build . --compact-vignettes=gs+qpdf
+      - R CMD check *tar.gz --as-cran 
+  - r: devel
+    os: linux
+    script:
+      - R CMD build . --compact-vignettes=gs+qpdf
+      - R CMD check *tar.gz --as-cran 
+  - r: release
+    os: osx
+    osx_image: xcode7.3
+    before_install:
+      - sudo tlmgr install framed titling
+    script:
+      - R CMD build . --compact-vignettes=gs+qpdf
+      - R CMD check *tar.gz --as-cran      
+      
 before_deploy: 
   - Rscript -e 'install.packages(c("pkgdown", "devtools"))'
   - Rscript -e 'devtools::install()'
