--- a/.travis.yml
+++ b/.travis.yml
@@ -9,23 +9,14 @@ matrix:
   include:
   - r: release
     os: linux
-    script:
-      - R CMD build . --compact-vignettes=gs+qpdf
-      - R CMD check *tar.gz --as-cran 
   - r: devel
     os: linux
-    script:
-      - R CMD build . --compact-vignettes=gs+qpdf
-      - R CMD check *tar.gz --as-cran 
   - r: release
-    os: osx
-    osx_image: xcode7.3
-    before_install:
-      - sudo tlmgr install framed titling
-    script:
-      - R CMD build . --compact-vignettes=gs+qpdf
-      - R CMD check *tar.gz --as-cran      
+    os: osx   
       
+
+r_check_args: --no-build-vignettes  
+
 before_deploy: 
   - Rscript -e 'install.packages(c("pkgdown", "devtools"))'
   - Rscript -e 'devtools::install()'
