--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,16 @@ matrix:
     os: osx   
       
 
-r_check_args: --no-build-vignettes  
+r_check_args: --no-build-vignettes 
+
+before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 
 before_deploy: 
-  - Rscript -e 'install.packages(c("pkgdown", "devtools"))'
+  - Rscript -e 'install.packages(c("devtools"))'
   - Rscript -e 'devtools::install()'
-  - Rscript -e 'pkgdown::build_site()'
+  
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_PAT
-  keep-history: true
-  local-dir: docs
-  on:
-    branch: master
-    
+  provider: script
+  script: Rscript -e 'pkgdown::deploy_site_github()'
+  skip_cleanup: true
+  
