add stats to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(standardize_traits)
 import(RCurl)
 import(XML)
 import(getPass)
+import(stats)
 import(taxize)
 import(units)
 importFrom(data.table,as.data.table)
