--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: traitdataform
 Type: Package
 Title: Formatting and Harmonizing Ecological Trait-Data
-Version: 0.6.1
-Date: 2020-11-11
+Version: 0.6.2
+Date: 2021-03-10
 Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.com", role = c("aut", "cre"), 
   comment = c(ORCID = "0000-0002-1494-5684")), 
     person("Caterina", "Penone", role = c("ctb"), comment = c(ORCID = "0000-0002-8170-6659")),
@@ -10,7 +10,8 @@ Authors@R: c(person("Florian D.", "Schneider",, "florian.dirk.schneider@gmail.co
     person("Dennis", "Heimann", role = c("ctb")),
     person("Felix","Neff", role = c("ctb")),
     person("Markus J.", "Ankenbrand", role = c("ctb")),
-    person("Jessica", "Burnett", role = c("ctb")))
+    person("Jessica", "Burnett", role = c("ctb")),
+    person("Iñaki","Ucar", role = c("ctb")))
 Description: Assistance for handling ecological trait data and applying the 
     Ecological Trait-Data Standard terminology (Schneider et al. 2019
     <doi:10.1111/2041-210X.13288>). There are two major use cases: (1) preparation of
