--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(standardize_traits)
 import(RCurl)
 import(XML)
 import(getPass)
+import(httr)
 import(stats)
 import(taxize)
 import(units)
