offline mode for get_gbif_taxonomy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,8 @@ export(standardize_taxa)
 export(standardize_traits)
 import(RCurl)
 import(XML)
+import(curl)
 import(getPass)
-import(httr)
 import(stats)
 import(taxize)
 import(units)
