add suppdata to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ import(XML)
 import(curl)
 import(getPass)
 import(stats)
+import(suppdata)
 import(taxize)
 import(units)
 importFrom(data.table,as.data.table)
